--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-loader-spinner": "^2.2.0",
     "react-scripts": "2.1.0",
     "react-vis": "^1.11.4",
     "sierra-library": "^3.0.10",
