--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "2.1.0",
     "react-slick": "^0.23.2",
     "react-vis": "^1.11.4",
+    "reactstrap": "^6.5.0",
     "sierra-library": "^3.0.10",
     "simple-flexbox": "^1.2.0",
     "slick-carousel": "^1.8.1",
