--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@octokit/rest": "^15.18.0",
     "bootstrap": "^3.3.7",
+    "d3-format": "^1.3.2",
     "express": "^4.16.4",
     "jsonfile": "^5.0.0",
     "react": "^16.6.0",
@@ -13,7 +14,7 @@
     "react-loader-spinner": "^2.2.0",
     "react-scripts": "2.1.0",
     "react-slick": "^0.23.2",
-    "react-vis": "^1.11.4",
+    "react-vis": "^1.11.5",
     "reactstrap": "^6.5.0",
     "sierra-library": "^3.0.10",
     "simple-flexbox": "^1.2.0",
