--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-loader-spinner": "^2.2.0",
     "react-scripts": "2.1.0",
     "react-slick": "^0.23.2",
+    "react-tooltip": "^3.9.0",
     "react-vis": "^1.11.5",
     "reactstrap": "^6.5.0",
     "sierra-library": "^3.0.10",
