--- a/package.json
+++ b/package.json
@@ -7,23 +7,16 @@
     "@octokit/rest": "^15.18.0",
     "bootstrap": "^3.3.7",
     "d3-format": "^1.3.2",
-    "express": "^4.16.4",
-    "jsonfile": "^5.0.0",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-loader-spinner": "^2.2.0",
-    "react-notifications": "^1.4.3",
-    "react-popup": "^0.9.3",
     "react-scripts": "2.1.0",
     "react-slick": "^0.23.2",
     "react-tooltip": "^3.9.0",
     "react-vis": "^1.11.5",
     "reactstrap": "^6.5.0",
-    "sierra-library": "^3.0.10",
-    "simple-flexbox": "^1.2.0",
-    "slick-carousel": "^1.8.1",
-    "write-json-file": "^3.0.2"
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "PORT=3308 react-scripts start",
